# clean-arch-rust

./: .gitignore  Cargo.toml  Rocket.toml.sample  diesel.toml
src/: main.rs
src/domain/: users.rs
src/infrastructure/: config.rs  config.rs.sample  db.rs  mod.rs  routing.rs  schema.rs
src/interfaces/: mod.rs
src/interfaces/controllers/: users_controller.rs
src/interfaces/controllers/product/: users_controller.rs
src/interfaces/gateways/database/: db.rs  db_repository.rs  mod.rs  schema.rs  user_repository.rs
src/usecase/: db_interface.rs  mod.rs  user_interface.rs  user_repository.rs
src/usecase/interactor/: user_interactor.rs
src/usecase/product/: mod.rs  user_interactor.rs
