[package]
name = "clean-arch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_contrib = "0.4.10"

diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
r2d2 = "0.8.9"

async-trait = "0.1.52"

[workspace]
member = ["domain", "infrastructure", "interfaces", "usecase"]